made things a bit better

--- a/lor-deck-viewer/src/styles/Decklist.css
+++ b/lor-deck-viewer/src/styles/Decklist.css
@@ -17,4 +17,12 @@ img {
   color: white;
 }
 
+.hidden {
+  display: none;
+}
+
+.visible {
+  display: initial;
+}
+
 /*# sourceMappingURL=Decklist.css.map */
