added a bunch of new functionality

--- a/lor-deck-viewer/src/styles/Decklist.css
+++ b/lor-deck-viewer/src/styles/Decklist.css
@@ -9,8 +9,9 @@
 
 img {
   width: 100%;
-  background-color: #223;
-  border-radius: 5px;
+  pointer-events: none;
+  height: auto;
+  transition: opacity 0.25s ease-in-out;
 }
 
 .error {
@@ -18,11 +19,11 @@ img {
 }
 
 .hidden {
-  display: none;
+  opacity: 0;
 }
 
 .visible {
-  display: initial;
+  opacity: 1;
 }
 
 /*# sourceMappingURL=Decklist.css.map */
