--- a/lor-deck-viewer/src/styles/Decklist.scss
+++ b/lor-deck-viewer/src/styles/Decklist.scss
@@ -9,8 +9,11 @@
 
 img {
   width: 100%;
-  background-color: #223;
-  border-radius: 5px;
+  pointer-events: none;
+  height: auto;
+  transition: opacity .25s ease-in-out;
+  //background-color: #223;
+  //border-radius: 5px;
 }
 
 .error {
@@ -18,9 +21,9 @@ img {
 }
 
 .hidden{
-  display: none;
+  opacity: 0;
 }
 
 .visible{
-  display: initial;
+  opacity: 1;
 }
