--- a/lor-deck-viewer/src/styles/Minicard.scss
+++ b/lor-deck-viewer/src/styles/Minicard.scss
@@ -1,4 +1,4 @@
-.Minicard {
+  .Minicard {
   font-family: "Roboto", sans-serif;
   font-size: 120%;
   margin: 1px;
@@ -16,13 +16,14 @@
   grid-template-columns: 10% 80% 10%;
 }
 
-p {
+.Minicard p {
   padding-top: 2px;
   padding-bottom: 2px;
   padding-left: 2px;
   margin-block-start: 0;
   margin-block-end: 0;
   margin-bottom: 0;
+  white-space: nowrap;
 }
 
 .cost {
@@ -30,10 +31,11 @@ p {
 }
 
 .name {
+  justify-self: left;
 }
 
 .count {
-  justify-self: center;
+  justify-self: left;
 }
 
 .freljord {
