--- a/lor-deck-viewer/src/styles/Header.css
+++ b/lor-deck-viewer/src/styles/Header.css
@@ -10,6 +10,10 @@
   border-bottom: 1vh solid navy !important;
   margin-bottom: 5vh;
 }
+.Header h1 {
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+}
 
 .Header :link {
   text-decoration: none;
