--- a/lor-deck-viewer/src/styles/Header.scss
+++ b/lor-deck-viewer/src/styles/Header.scss
@@ -9,6 +9,11 @@
   background-color: #020024;
   border-bottom: 1vh solid navy !important;
   margin-bottom: 5vh;
+
+  h1{
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+  }
 }
 
 .Header :link {
