--- a/lor-deck-viewer/src/styles/Minicard.css
+++ b/lor-deck-viewer/src/styles/Minicard.css
@@ -62,6 +62,10 @@
   background: linear-gradient(to right, #ffd599 80%, transparent);
 }
 
+.bilgewater {
+  background: linear-gradient(to right, #e07d62 80%, transparent)
+}
+
 .common {
   background-color: #04bf66;
 }
